istio-resources/base/gateway-authorizationpolicy-kserve-cloud.yaml
# Allow all traffic to the istio-ingressgateway
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: istio-ingressgateway-kubeflow-cloud
  namespace: istio-system
spec:
  action: ALLOW
  selector:
    # Same as the istio-ingressgateway Service selector
    matchLabels:
      app: istio-ingressgateway
      istio: ingressgateway
  rules:
    - to:
        - operation:
            hosts:
              - serving.kubefrog.fr
              - '*.serving.kubefrog.fr'
