istio-resources/base/gateway-authorizationpolicy-local-ip.yaml
# Allow all traffic to the istio-ingressgateway
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: istio-ingressgateway-local-ip
  namespace: istio-system
spec:
  action: DENY
  selector:
    # Same as the istio-ingressgateway Service selector
    matchLabels:
      app: istio-ingressgateway
      istio: ingressgateway
  rules:
    - from:
      - source:
          notIpBlocks:
            #  gateway and private range
            - "192.168.0.0/24"
            - "140.82.112.0/20"
            - "192.30.252.0/22"
            - "127.0.0.0/8"
            - "10.0.0.0/8"
            # free SAS check if is not a bot
            - "37.174.56.193"
            # cloudflare ranges IP/IPv4
            - "172.16.0.0/12"
            - 173.245.48.0/20
            - 103.21.244.0/22
            - 103.22.200.0/22
            - 103.31.4.0/22
            - 141.101.64.0/18
            - 108.162.192.0/18
            - 190.93.240.0/20
            - 188.114.96.0/20
            - 197.234.240.0/22
            - 198.41.128.0/17
            - 162.158.0.0/15
            - 104.16.0.0/13
            - 104.24.0.0/14
            - 172.64.0.0/13
            - 131.0.72.0/22
            # cloudflare ranges IP/IPv6
            - 2400:cb00::/32
            - 2606:4700::/32
            - 2803:f800::/32
            - 2405:b500::/32
            - 2405:8100::/32
            - 2a06:98c0::/29
            - 2c0f:f248::/32
            # amazon-instance
            - 34.207.83.179
            # wireguard
            # - "172.16.0.0/12"
          notRemoteIpBlocks:
            #  gateway and private range
            #  gateway and private range
            - "192.168.0.0/24"
            - "140.82.112.0/20"
            - "192.30.252.0/22"
            - "127.0.0.0/8"
            - "10.0.0.0/8"
            # free SAS check if is not a bot
            - "37.174.56.193"
            # cloudflare ranges IP/IPv4
            - "172.16.0.0/12"
            - 173.245.48.0/20
            - 103.21.244.0/22
            - 103.22.200.0/22
            - 103.31.4.0/22
            - 141.101.64.0/18
            - 108.162.192.0/18
            - 190.93.240.0/20
            - 188.114.96.0/20
            - 197.234.240.0/22
            - 198.41.128.0/17
            - 162.158.0.0/15
            - 104.16.0.0/13
            - 104.24.0.0/14
            - 172.64.0.0/13
            - 131.0.72.0/22
            # cloudflare ranges IP/IPv6
            - 2400:cb00::/32
            - 2606:4700::/32
            - 2803:f800::/32
            - 2405:b500::/32
            - 2405:8100::/32
            - 2a06:98c0::/29
            - 2c0f:f248::/32
            # amazon-instance
            - 34.207.83.179
